syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.bachelor";
option java_outer_classname = "MailComm";
option objc_class_prefix = "MC";

package bachelor;

message Keybundle {
    int32 registration_id = 1;
    int32 device_id = 2;
    int32 preKey_id = 3;
    int32 signed_pre_key_id = 4;
    bytes signed_pre_key_signature = 5;
    bytes pre_key_public = 6;
    bytes signed_pre_key_public = 7;
    bytes identity_key = 8;
}

message SigningRequest {
    bytes certification_request = 1;
    bytes public_key = 2;
}

message SigningResponse {
    bytes x509_certificate = 1;
}

message MailRequest {
    bytes mail = 1;
    enum Method {
        SIGN = 0;
        DECRYPT = 1;
    }
    Method method = 2;
}

message MailResponse {
    bytes mail = 1;
}

service Decrypter {
    rpc SubscribeMails(stream MailResponse) returns(stream MailRequest) {}
    rpc exchangeKeyBundle(Keybundle) returns (Keybundle) {}
    rpc signPublicKey(SigningRequest) returns (SigningResponse) {}
}